components/bifrost/configs/home/ingress-bifrost.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bifrost
  namespace: bifrost
  annotations:
    tailscale.com/proxy-group: private-ingress
    tailscale.com/tags: tag:k8s-private
    tailscale.com/http-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Bifrost"
    gethomepage.dev/group: "Development"
    gethomepage.dev/icon: "mdi-swap-horizontal-bold"
    gethomepage.dev/href: "https://bifrost.tail0c49c.ts.net"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - bifrost
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bifrost
                port:
                  number: 8080
